--- a/frontend/assets/css/custom.css
+++ b/frontend/assets/css/custom.css
@@ -1,11 +1,8 @@
-html, body {
+html, body{
     height: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-#map {
-    /* configure the size of the map */
     width: 100%;
-    height: 100%;
-}
+  }
+
+  #map{
+    height: 700px;
+  }
